Set theme variables

--- a/public_html/sites/all/themes/fki/src/less/template/elements/image-cover.less
+++ b/public_html/sites/all/themes/fki/src/less/template/elements/image-cover.less
@@ -11,8 +11,8 @@
 // --------------------------------------------------
 
 //== Colouring
-@fki-image-cover-background-color:   @state-quarternary-bg;
-@fki-image-cover-font-color:         @state-quarternary-text;
+@fki-image-cover-background-color:   @state-quaternary-bg;
+@fki-image-cover-font-color:         @state-quaternary-text;
 
 //== Spacing
 @fki-image-cover-top-spacing:                20px;
