--- a/public_html/sites/all/themes/fki/src/less/template/elements/teaser/teaser-simple.less
+++ b/public_html/sites/all/themes/fki/src/less/template/elements/teaser/teaser-simple.less
@@ -12,8 +12,8 @@
 
 //== Colouring
 @fki-teaser-simple-background-color:                     @content-bg;
-@fki-teaser-simple-image-cover-background-color:         @state-quarternary-bg;
-@fki-teaser-simple-image-cover-font-color:               @state-quarternary-text;
+@fki-teaser-simple-image-cover-background-color:         @state-quaternary-bg;
+@fki-teaser-simple-image-cover-font-color:               @state-quaternary-text;
 @fki-teaser-simple-image-cover-highlighted-font-color:   @brand-tertiary;
 
 //== Spacing
