Remove fontawesome from theme and extract to libraries

--- a/public_html/profiles/os2intra/libraries/fontawesome/less/variables.less
+++ b/public_html/profiles/os2intra/libraries/fontawesome/less/variables.less
@@ -539,8 +539,8 @@
 @fa-var-smile-o: "\f118";
 @fa-var-soccer-ball-o: "\f1e3";
 @fa-var-sort: "\f0dc";
-@fa-var-sort-alpfki-asc: "\f15d";
-@fa-var-sort-alpfki-desc: "\f15e";
+@fa-var-sort-alpha-asc: "\f15d";
+@fa-var-sort-alpha-desc: "\f15e";
 @fa-var-sort-amount-asc: "\f160";
 @fa-var-sort-amount-desc: "\f161";
 @fa-var-sort-asc: "\f0de";
