Include font awesome icon in menu

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
@@ -2,6 +2,10 @@
 // | Variables
 // |--------------------------------------------------------------------------
 
+
+//== Icon
+@bs3-sidebar-icon-identifier-prefix: fa;
+
 //== Base
 @bs3-sidebar-left-width:	280px;
 @bs3-sidebar-right-width:	320px;
