Change sidebar colors and insert breadcrumb

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-designer.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-designer.less
@@ -46,6 +46,9 @@
 @content-bg:           #fff;
 @content-border-color: @body-bg;
 
+// Typography
+@text-color-light: 	#6c8ba8;
+
 // Button
 @btn-secondary-color:   #fff;
 @btn-secondary-bg:      @brand-secondary;
