--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
@@ -53,16 +53,16 @@
 
 @bs3-sidebar-nav-dropdown-indicator-font-family:	"FontAwesome";
 @bs3-sidebar-nav-dropdown-indicator-font-size:		14px;
-@bs3-sidebar-nav-dropdown-indicator-icon:			"\f105"; // .fa-angle-right
+@bs3-sidebar-nav-dropdown-indicator-icon:					"\f105"; // .fa-angle-right
 
 @bs3-sidebar-nav-dropdown-menu-link-font-family:	@bs3-sidebar-nav-link-font-family;
-@bs3-sidebar-nav-dropdown-menu-link-font-size:      @font-size-small;
-@bs3-sidebar-nav-dropdown-menu-link-font-weight:    @bs3-designer-font-weight;
+@bs3-sidebar-nav-dropdown-menu-link-font-size:    @font-size-small;
+@bs3-sidebar-nav-dropdown-menu-link-font-weight:  @bs3-designer-font-weight;
 
 //== Social links
 @bs3-sidebar-social-link-width:             40px;
 @bs3-sidebar-social-link-height:            40px;
-@bs3-sidebar-social-link-icon-font-size:	20px;
+@bs3-sidebar-social-link-icon-font-size:		20px;
 @bs3-sidebar-social-link-border-radius:     100%;
 
 //== Spacer
@@ -73,17 +73,17 @@
 // |--------------------------------------------------------------------------
 
 //== Base
-@bs3-sidebar-background-color:                                          #323641;
+@bs3-sidebar-background-color:	@brand-primary;
 
-@bs3-sidebar-left-box-shadow: 											inset -15px 0 15px -15px rgba(0, 0, 0, .6);
-@bs3-sidebar-right-box-shadow: 											inset -15px 0 -15px -15px rgba(0, 0, 0, 1);
+@bs3-sidebar-left-box-shadow: 	inset -15px 0 15px -15px rgba(0, 0, 0, .6);
+@bs3-sidebar-right-box-shadow: 	inset -15px 0 -15px -15px rgba(0, 0, 0, 1);
 
 //== Logo
 @bs3-sidebar-logo-background-color:                                     transparent;
 @bs3-sidebar-logo-background-color-rgba:                                transparent;
 
-@bs3-sidebar-logo-border-color:                                         #41444e;
-@bs3-sidebar-logo-border-color-rgba:                                    rgba(255, 255, 255, .08);
+@bs3-sidebar-logo-border-color:                                         #12385c;
+@bs3-sidebar-logo-border-color-rgba:                                    rgba(0, 0, 0, .12);
 
 @bs3-sidebar-logo-textual-font-color:                                   #fff;
 
@@ -95,25 +95,25 @@
 @bs3-sidebar-nav-headline-background-color:                             #2d303a;
 @bs3-sidebar-nav-headline-background-color-rgba:                        rgba(0, 0, 0, 0.10);
 
-@bs3-sidebar-nav-headline-border-color:                                 #41444e;
-@bs3-sidebar-nav-headline-border-color-rgba:                            rgba(255, 255, 255, .08);
+@bs3-sidebar-nav-headline-border-color:                                 #12385c;
+@bs3-sidebar-nav-headline-border-color-rgba:                            rgba(0, 0, 0, .12);
 
 //== Link
 @bs3-sidebar-nav-link-background-color:                                 transparent;
-@bs3-sidebar-nav-link-background-color-rgba:                            rgba(255, 255, 255, 0);
+@bs3-sidebar-nav-link-background-color-rgba:                            rgba(0, 0, 0, 0);
 
 @bs3-sidebar-nav-link-hover-background-color:                           #383c47;
-@bs3-sidebar-nav-link-hover-background-color-rgba:                      rgba(255, 255, 255, 0.03);
+@bs3-sidebar-nav-link-hover-background-color-rgba:                      rgba(0, 0, 0, 0.04);
 
-@bs3-sidebar-nav-link-active-background-color:                          @bs3-sidebar-nav-link-background-color;
-@bs3-sidebar-nav-link-active-background-color-rgba:                     @bs3-sidebar-nav-link-background-color-rgba;
+@bs3-sidebar-nav-link-active-background-color:                          @bs3-sidebar-nav-link-hover-background-color;
+@bs3-sidebar-nav-link-active-background-color-rgba:                     @bs3-sidebar-nav-link-hover-background-color-rgba;
 
-@bs3-sidebar-nav-link-font-color:                                       #aaabae;
+@bs3-sidebar-nav-link-font-color:                                       #fff;
 @bs3-sidebar-nav-link-hover-font-color:                                 #fff;
-@bs3-sidebar-nav-link-active-font-color:                                @bs3-sidebar-nav-link-hover-font-color;
+@bs3-sidebar-nav-link-active-font-color:                                @brand-secondary;
 
-@bs3-sidebar-nav-link-border-color:                                     #41444e;
-@bs3-sidebar-nav-link-border-color-rgba:                                rgba(255, 255, 255, .08);
+@bs3-sidebar-nav-link-border-color:                                     #12385c;
+@bs3-sidebar-nav-link-border-color-rgba:                                rgba(0, 0, 0, .12);
 
 @bs3-sidebar-nav-link-hover-border-color:                               @bs3-sidebar-nav-link-border-color;
 @bs3-sidebar-nav-link-hover-border-color-rgba:                          @bs3-sidebar-nav-link-border-color-rgba;
@@ -125,16 +125,16 @@
 @bs3-sidebar-nav-link-hover-icon-color:                                 @bs3-sidebar-nav-link-hover-font-color;
 @bs3-sidebar-nav-link-active-icon-color:                                @bs3-sidebar-nav-link-active-font-color;
 
-@bs3-sidebar-nav-dropdown-font-color:                                   #aaabae;
+@bs3-sidebar-nav-dropdown-font-color:                                   #fff;
 @bs3-sidebar-nav-dropdown-hover-font-color:                             #fff;
 @bs3-sidebar-nav-dropdown-active-font-color:                            @bs3-sidebar-nav-dropdown-hover-font-color;
 
-@bs3-sidebar-nav-dropdown-indicator-color:                              #fff;
+@bs3-sidebar-nav-dropdown-indicator-color:                              #4d637a;
 @bs3-sidebar-nav-dropdown-hover-indicator-color:                        #fff;
 @bs3-sidebar-nav-dropdown-active-indicator-color:                       #fff;
 
 @bs3-sidebar-nav-dropdown-menu-background-color:                        #2d303a;
-@bs3-sidebar-nav-dropdown-menu-background-color-rgba:                   rgba(0, 0, 0, .10);
+@bs3-sidebar-nav-dropdown-menu-background-color-rgba:                   rgba(0, 0, 0, .05);
 
 @bs3-sidebar-nav-dropdown-menu-link-font-color:                         @bs3-sidebar-nav-link-font-color;
 @bs3-sidebar-nav-dropdown-menu-link-hover-font-color:                   @bs3-sidebar-nav-link-hover-font-color;
