Breadcrumb outer spacing

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/template.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/template.less
@@ -3,10 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 
-// Heading
+// Inner spacing
+@default-left-right-spacing: floor( (@grid-gutter-width / 2) );
 @default-heading-top-bottom-spacing: 4px;
-@default-heading-left-right-spacing: 15px;
-
-// Body
 @default-body-top-bottom-spacing: 10px;
-@default-body-left-right-spacing: 15px;
