--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/breadcrumb.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/breadcrumb.less
@@ -26,10 +26,10 @@
 
 // Breadcrumb
 .fki-breadcrumb-container {
-	padding: 10px 0;
+	padding: 10px;
 
 	.breadcrumb {
-		margin: 0;
+		margin: 0 @default-left-right-spacing;
 		border-radius: 0;
 
 		li {
