--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/nav-tabs.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/nav-tabs.less
@@ -3,8 +3,8 @@
 @fki-nav-tabs-background-color:        @btn-default-bg;
 @fki-nav-tabs-hover-font-color:        darken(@fki-nav-tabs-font-color, 5%);
 @fki-nav-tabs-hover-background-color:  darken(@fki-nav-tabs-background-color, 15%);
-@fki-nav-tabs-active-font-color:       @btn-tertiary-color;
-@fki-nav-tabs-active-background-color: @btn-tertiary-bg;
+@fki-nav-tabs-active-font-color:       @btn-secondary-color;
+@fki-nav-tabs-active-background-color: @btn-secondary-bg;
 @fki-nav-tabs-border-radius:           @border-radius-base;
 @fki-nav-tabs-transition-time:         @bs3-designer-transition-time;
 @fki-nav-tabs-stacked-spacing:         5px;
