Remove sudden padding from element on body

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/wrapper.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/wrapper.less
@@ -24,7 +24,7 @@
 
 // Content
 .content {
-    padding: @grid-gutter-width 0 0;
+    padding: 0 0 @grid-gutter-width;
 }
 
 // --------------------------------------------------
