Add top menu bar

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-designer.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-designer.less
@@ -163,17 +163,17 @@
 // --------------------------------------------------
 
 // Font weight
-@bs3-designer-headings-font-weight-light: 	    400;
-@bs3-designer-headings-font-weight-semi-light:  400;
-@bs3-designer-headings-font-weight: 		    		700;
-@bs3-designer-headings-font-weight-semi-bold:		@bs3-designer-headings-font-weight;
-@bs3-designer-headings-font-weight-bold: 	    	@bs3-designer-headings-font-weight-semi-bold;
+@headings-font-weight-light: 				400;
+@headings-font-weight-semi-light: 	@headings-font-weight-light;
+@headings-font-weight: 							700;
+@headings-font-weight-semi-bold: 		@headings-font-weight;
+@headings-font-weight-bold: 				@headings-font-weight-semi-bold;
 
-@bs3-designer-font-weight-light: 	    300;
-@bs3-designer-font-weight-semi-light:	@bs3-designer-font-weight-light;
-@bs3-designer-font-weight: 		        400;
-@bs3-designer-font-weight-semi-bold:	@bs3-designer-font-weight;
-@bs3-designer-font-weight-bold: 	    700;
+@font-weight-light: 			300;
+@font-weight-semi-light: 	@font-weight-light;
+@font-weight: 						400;
+@font-weight-semi-bold: 	@font-weight;
+@font-weight-bold: 				700;
 
 // Line height
 @bs3-designer-headings-h1-line-height: 	bs3-designer-mixin-line-height(@font-size-h1);
