--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
@@ -20,18 +20,18 @@
 
 @bs3-sidebar-logo-textual-font-family: 	@headings-font-family;
 @bs3-sidebar-logo-textual-font-size:    @font-size-h2;
-@bs3-sidebar-logo-textual-font-weight:  @bs3-designer-headings-font-weight-semi-bold;
+@bs3-sidebar-logo-textual-font-weight:  @headings-font-weight-semi-bold;
 
 @bs3-sidebar-logo-slogan-font-family:   @font-family-sans-serif;
 @bs3-sidebar-logo-slogan-font-size:     @font-size-small;
-@bs3-sidebar-logo-slogan-font-weight:   @bs3-designer-font-weight;
+@bs3-sidebar-logo-slogan-font-weight:   @font-weight;
 
 //== Headline
 @bs3-sidebar-nav-headline-indentation:  20px;
 
 @bs3-sidebar-nav-headline-font-family:  @font-family-sans-serif;
 @bs3-sidebar-nav-headline-font-size:    @font-size-small;
-@bs3-sidebar-nav-headline-font-weight:  @bs3-designer-font-weight-bold;
+@bs3-sidebar-nav-headline-font-weight:  @font-weight-bold;
 
 @bs3-sidebar-nav-headline-border-width: 1px;
 @bs3-sidebar-nav-headline-border-style:	solid;
@@ -44,7 +44,7 @@
 
 @bs3-sidebar-nav-link-font-family:  @font-family-sans-serif;
 @bs3-sidebar-nav-link-font-size:    @font-size-base;
-@bs3-sidebar-nav-link-font-weight:  @bs3-designer-font-weight;
+@bs3-sidebar-nav-link-font-weight:  @font-weight;
 
 @bs3-sidebar-nav-link-border-width: 1px;
 @bs3-sidebar-nav-link-border-style: solid;
@@ -57,7 +57,7 @@
 
 @bs3-sidebar-nav-dropdown-menu-link-font-family:	@bs3-sidebar-nav-link-font-family;
 @bs3-sidebar-nav-dropdown-menu-link-font-size:    @font-size-small;
-@bs3-sidebar-nav-dropdown-menu-link-font-weight:  @bs3-designer-font-weight;
+@bs3-sidebar-nav-dropdown-menu-link-font-weight:  @font-weight;
 
 //== Social links
 @bs3-sidebar-social-link-width:             40px;
