--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-main-navigation.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-main-navigation.less
@@ -29,8 +29,8 @@
 @bs3-main-navigation-nav-link-background-color:                  transparent;
 
 @bs3-main-navigation-nav-link-hover-text-decoration:             none;
-@bs3-main-navigation-nav-link-hover-font-color:                  #fff;
-@bs3-main-navigation-nav-link-hover-background-color:            @header-border-color;
+@bs3-main-navigation-nav-link-hover-font-color:                  @state-secondary-text;
+@bs3-main-navigation-nav-link-hover-background-color:            @state-secondary-bg;
 
 @bs3-main-navigation-nav-link-active-text-decoration:            none;
 @bs3-main-navigation-nav-link-active-font-color:                 @bs3-main-navigation-nav-link-hover-font-color;
