--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-main-navigation.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-main-navigation.less
@@ -7,6 +7,7 @@
 @bs3-main-navigation-background-color:     	@content-bg;
 @bs3-main-navigation-background-color-rgba: rgba(red(@bs3-main-navigation-background-color), green(@bs3-main-navigation-background-color), blue(@bs3-main-navigation-background-color), 1);
 @bs3-main-navigation-border-radius:         @border-radius-base;
+@bs3-main-navigation-margin-bottom:         0;
 
 // Sticky
 @bs3-main-navigation-sticky-zindex:  @zindex-navbar-fixed;
