--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bootstrap.less
@@ -200,10 +200,10 @@
 @input-border-radius-small:      @border-radius-small;
 
 //** Border color for inputs on focus
-@input-border-focus:             #66afe9;
+@input-border-focus:             darken(@input-border, 10%);
 
 //** Placeholder text color
-@input-color-placeholder:        #999;
+@input-color-placeholder:        @brand-primary;
 
 //** Default `.form-control` height
 @input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
