Border on main navigation links

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/main-navigation.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/main-navigation.less
@@ -32,6 +32,13 @@
             }
         }
     }
+
+    .main-navigation-list {
+
+        > li {
+            border-left: 2px solid @body-bg;
+        }
+    }
 }
 
 // --------------------------------------------------
