--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bootstrap.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bootstrap.less
@@ -144,7 +144,7 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              #fff;
+@btn-default-color:              @brand-primary;
 @btn-default-bg:                 #d9d9d9;
 @btn-default-border:             @btn-default-bg;
 
