--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
@@ -41,6 +41,7 @@
 
 //== Navigation
 @bs3-sidebar-nav-link-indentation:	20px;
+@bs3-sidebar-nav-link-inner-top-bottom-spacing: 12px;
 
 @bs3-sidebar-nav-link-font-family:  @font-family-sans-serif;
 @bs3-sidebar-nav-link-font-size:    @font-size-base;
