Alter sidebar to stay directly below content

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
@@ -7,8 +7,10 @@
 @bs3-sidebar-icon-identifier-prefix: fa;
 
 //== Base
-@bs3-sidebar-left-width:	280px;
-@bs3-sidebar-right-width:	320px;
+@bs3-sidebar-left-width:	270px;
+@bs3-sidebar-right-width:	310px;
+
+@bs3-sidebar-extra-width: 20px;
 
 //== Logo
 @bs3-sidebar-logo-spacing:  	30px; // Top/bottom
