Make sidebar and adminbar work together

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/bs3-sidebar.less
@@ -40,6 +40,7 @@
 
 //== Content effects
 @bs3-sidebar-content-effect-overflow-zindex:	floor((@zindex-navbar-fixed + 10));
+@bs3-sidebar-content-box-shadow: 0 0 7px 5px rgba(0, 0, 0, 0.2);
 
 //== Navigation
 @bs3-sidebar-nav-link-indentation:	20px;
@@ -78,7 +79,7 @@
 //== Base
 @bs3-sidebar-background-color:	@brand-primary;
 
-@bs3-sidebar-left-box-shadow: 	inset -15px 0 15px -15px rgba(0, 0, 0, .6);
+@bs3-sidebar-left-box-shadow: 	inset -15px 0 35px -15px rgba(0, 0, 0, .6);
 @bs3-sidebar-right-box-shadow: 	inset -15px 0 -15px -15px rgba(0, 0, 0, 1);
 
 //== Logo
