Sidebar theme settings
- Add fredericia theme settings feature

--- a/public_html/profiles/os2intra/themes/fki/src/less/variables/loader.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/variables/loader.less
@@ -3,5 +3,5 @@
 @import 'bs3-designer';
 @import 'bs3-main-navigation';
 @import 'bs3-simple-navigation';
-@import 'bs3-sidebar';
+//@import 'bs3-sidebar';
 @import 'fontawesome';
