Full node template

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/loader.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/loader.less
@@ -1,8 +1,10 @@
 @import "nav-tabs";
 @import "footer-elements";
 @import "full-width-image";
-@import "teaser/loader";
-@import "list/loader";
 @import "includeable";
 @import "box";
 @import "social-icon";
+
+@import "full/loader";
+@import "teaser/loader";
+@import "list/loader";
