Further updates on full node tpl

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/full/full.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/full/full.less
@@ -17,7 +17,7 @@
 // Full node
 .fki-full {
 
-	.fki-full-node-info {
+	.fki-full-info {
 		list-style: none;
 		margin: 0;
 		padding: 0;
@@ -34,6 +34,20 @@
 		a {
 			font-weight: bold;
 		}
+	}
+
+	.fki-full-heading {
+
+		.fki-full-heading-title {
+			.heading-h3;
+			margin: 8px 0;
+		}
+	}
+
+	.fki-full-intro {
+		color: @brand-secondary;
+		.heading-h5;
+		font-weight: @headings-font-weight-bold;
 	}
 }
 
