--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/loader.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/loader.less
@@ -1,9 +1,8 @@
 @import "nav-tabs";
 @import "footer-elements";
 @import "full-width-image";
-@import "includeable";
 @import "box";
-@import "social-icon";
+@import "entity-info";
 
 @import "full/loader";
 @import "teaser/loader";
