--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/entity-info.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/entity-info.less
@@ -1,47 +1,36 @@
 // |--------------------------------------------------------------------------
-// | Includeable
+// | Entity info
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .fki-includeable
+// | - .fki-entity-info
 // |
 
 // --------------------------------------------------
 // Variables
 // --------------------------------------------------
 
-@fki-includeable-stacked-spacing: @grid-gutter-width;
-
-@fki-includeable-heading-font-color: @gray-darker;
-@fki-includeable-heading-top-bottom-spacing: 3px;
-@fki-includeable-heading-left-right-spacing: 0;
-
-@fki-includeable-body-top-bottom-spacing: 0;
-@fki-includeable-body-left-right-spacing: 0;
-
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
-// Includeable
-.fki-includeable {
+// Entity info
+.fki-entity-info {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 
-	.fki-includeable-heading {
-		padding: @fki-includeable-heading-top-bottom-spacing @fki-includeable-heading-left-right-spacing;
+	> li {
+		display: inline-block;
 
-		.fki-includeable-title {
-			margin: 0;
-			.heading-h6;
-
-			&,
-			a {
-				color: @fki-includeable-heading-font-color;
-			}
+		+ li:before {
+			content: "@{breadcrumb-separator}\00a0"; // Unicode space added since inline-block means non-collapsing white-space
+			padding: 0 5px;
 		}
 	}
 
-	.fki-includeable-body {
-		padding: @fki-includeable-body-top-bottom-spacing @fki-includeable-body-left-right-spacing;
+	a {
+		font-weight: bold;
 	}
 }
 
@@ -52,55 +41,83 @@
 // Mobile
 @media @media-query-mobile {
 
-	// List
-	.fki-list {}
+	// Entity info
+	.fki-entity-info {}
 }
 
 // Mobile - only
 @media @media-query-mobile-only {
 
-	// List
-	.fki-list {}
+	// Entity info
+	.fki-entity-info {}
 }
 
 // Tablet
 @media @media-query-tablet {
 
-	// List
-	.fki-list {}
+	// Entity info
+	.fki-entity-info {}
 }
 
 // Tablet - only
 @media @media-query-tablet-only {
 
-	// List
-	.fki-list {}
+	// Entity info
+	.fki-entity-info {}
 }
 
 // Desktop
 @media @media-query-desktop {
 
-	// List
-	.fki-list {}
+	// Entity info
+	.fki-entity-info {}
 }
 
 // Desktop - only
 @media @media-query-desktop-only {
 
-	// List
-	.fki-list {}
+	// Entity info
+	.fki-entity-info {}
 }
 
 // Large desktop
 @media @media-query-large-desktop {
 
-	// List
-	.fki-list {}
+	// Entity info
+	.fki-entity-info {}
 }
 
 // Large desktop - only
 @media @media-query-large-desktop-only {
 
-	// List
-	.fki-list {}
+	// Entity info
+	.fki-entity-info {}
 }
+
+// Print
+@media print {
+
+	// Entity info
+	.fki-entity-info {}
+}
+
+// Touch
+.touch {
+
+	// Entity info
+	.fki-entity-info {}
+}
+
+// No touch
+.no-touch {
+
+	// Entity info
+	.fki-entity-info {}
+}
+
+// --------------------------------------------------
+// Mixins
+// --------------------------------------------------
+
+// Entity info mixin
+.fki-mixin-entity-info() {}
