Add homebox layout

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/loader.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/loader.less
@@ -3,7 +3,4 @@
 @import "full-width-image";
 @import "box";
 @import "entity-info";
-
-@import "full/loader";
-@import "teaser/loader";
-@import "list/loader";
+@import "homebox";
