--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
@@ -33,6 +33,22 @@
 				.make-sm-column(4);
 			}
 		}
+
+		#homebox-buttons {
+			.make-xs-column(12);
+			.text-right;
+
+			#homebox-add-link {
+				font-size: 0;
+
+				&:before {
+					font-family: FontAwesome;
+					color: @brand-primary;
+					font-size: @font-size-base;
+					content: @fa-var-object-ungroup;
+				}
+			}
+		}
 	}
 }
 
