Add owl carousels

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -72,6 +72,35 @@
 }
 
 // --------------------------------------------------
+// Variants
+// --------------------------------------------------
+
+// Watermark
+#homebox {
+
+	#homebox-block-views_os2intra_forside_views-block-1,
+	#homebox-block-views_os2intra_forside_views-block_1 {
+		.fki-box-watermarked;
+	}
+}
+
+// Quinary (info til alle)
+#homebox {
+
+	#homebox-block-views_os2intra_forside_views-block_1 {
+		.fki-box-quinary;
+	}
+}
+
+// Tertiary (kommende aktiviteter)
+#homebox {
+
+	#homebox-block-views_os2intra_forside_views-block-1 {
+		.fki-box-tertiary;
+	}
+}
+
+// --------------------------------------------------
 // Responsive
 // --------------------------------------------------
 
