--- a/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/page/front.less
@@ -35,11 +35,12 @@
 		}
 
 		#homebox-buttons {
-			.make-xs-column(12);
 			.text-right;
+			.make-xs-column(12);
 
 			#homebox-add-link {
 				font-size: 0;
+				margin: 0 @default-left-right-spacing;
 
 				&:before {
 					font-family: FontAwesome;
@@ -47,6 +48,21 @@
 					font-size: @font-size-base;
 					content: @fa-var-object-ungroup;
 				}
+
+				&,
+				&:hover,
+				&:focus,
+				&:active {
+					text-decoration: none;
+				}
+			}
+		}
+
+		#homebox-add {
+			.make-xs-column(12);
+
+			> ul {
+				margin: 0 @default-left-right-spacing;
 			}
 		}
 	}
