Alter node.tpl.php

--- a/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
+++ b/public_html/profiles/os2intra/themes/fki/src/less/template/elements/homebox.less
@@ -24,8 +24,16 @@
 		background: none;
 	}
 
-	.fki-box-homebox {
-		.fki-box;
+	.homebox-portlet {
+		background-color: transparent;
+		margin: 0;
+		padding: 0;
+		border: 0;
+		background: none;
+
+		&.fki-box {
+			.fki-box;
+		}
 
 		// Icons
 		.portlet-icon {
